  * Added 2 new APIs on JavaConventions: 
         - IJavaModelStatus validateClasspath(IJavaProject project, IClasspathEntry[] classpath, IPath outputLocation) 
         - IJavaModelStatus validateClasspathEntry(IJavaProject project, IClasspathEntry entry, boolean checkSourceAttachment) 
 * Ant Eclipse compiler task added (org.eclipse.jdt.core.ant.Jdtcom)
* Assertions support added (by default the compiler is 1.3 compliant, but it can optionally be turned into source 1.4 mode cf. JavaCore options).

PRs Fixed in this Release (since 1.0NL stream)
==================================================================================
1GCZ9VM: ITPJCORE:WIN2000 - DCR - Compiler - Batch compiler should be API
1GHO6QR: ITPJCORE:WINNT - Code Assist - no method completion when return type is secondary one
1GH0AU7: ITPJCORE:ALL - Eval - VerifyError in scrapbook page
1GH2R62: ITPJCORE:WIN2000 - Typo in progress message
1GGYL32: ITPJCORE:ALL - Default supertypes are not visible when qualified
1GDFJK0: IVJIDT:WIN2000 - Using 'synchronized' produces invalid exception table values in class, causes "Illegal exception table range" exception, VAJ 3.5+ 
1GGAK6G: ITPJCORE:ALL - Incorrect javadoc comment in JavaElement 
1GF9L3K: ITPDUI:ALL - Eval - Private array resolution failure 
1GF8KHX: ITPJUI:ALL - Invalid project build path should be warning, not error 
1GF7JIH: ITPJCORE:ALL - Exception when removing network drive 
1GEYBL9: ITPJUI:WINNT - Adding source folders on CP is very confusing 
1GEJAOT: ITPJUI:WINNT - JRE Source attachment set to path to does not exist 
1GEHZNB: ITPJUI:WINNT - smoke 114: formatter inserts extra tab in first line 
1GCZZT4: ITPJCORE:Fault-tolerance - missing constructor invocation could still answer the allocated type 
1GAU96P: ITPJCORE:WINNT - DCR - JM - JavaProject should provide a class path validation method 
1G7A1TL: ITPJCORE:WINNT - DCR - JM - Rules for classpath not specified 
1FVVWZT: ITPJCORE:ALL - JM - IBinaryType should implement getSourceFileName() 